packages/llvm/src/tests/snapshots/llvm__tests__            const x = ((1 + 1)) * ((1 * 1)).snap
---
source: packages/llvm/src/tests/mod.rs
expression: actual_output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %x = alloca double, align 8
  store double 2.000000e+00, double* %x, align 8
  ret void
}

