packages/llvm/src/tests/snapshots/llvm__tests__    let x = 1;    x = 2;.snap
---
source: packages/llvm/src/tests/mod.rs
expression: actual_output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %x = alloca double, align 8
  store double 1.000000e+00, double* %x, align 8
  store double 2.000000e+00, double* %x, align 8
  ret void
}

